# tritonix

./: .gitignore  README.md  punchcard.md  pyproject.toml  sp_bench.py
.github/workflows/: publish-to-pypi.yml
docs/: requirements.txt
docs/source/: autotuning.rst  conf.py  dispatch.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: autotune.rst  dispatcher.rst  ops.rst
examples/: balance.py  bench_conv2d.py  bench_triton_matmul_kernel.py  dense_block_sparse_mma.py  profile_mma_fp16.py  splinear_24.py  swizzle.ipynb  triton_vs_torch_stats.py  tune_matmul.py  tune_statistics.py
kernels/: block_sparse.py
kernels/matrix/: sparse.py
playground/: bench.py  bench_mma.py  bench_sparse_conv2.py  bench_triton_conv.py  block_bench.py  block_sparse_bench.py  block_sparse_group16_bench.py  block_sparse_ngroups_bench.py  bsr_bench.py  channelsparse_conv2d.py  configs.py  conv2d.py  conv2d_bwd.py  conv2d_fwd.py  conv2d_np.py  ds_mm_24.py  finetune.py  fp16_accumulate_results.txt  fused_swiglu.py  hard_info.py  list_tensors.ipynb  matmul.py  mlp_e2e.py  naive_conv2d.py  opt.py  small_convs.py  swiglu.py  test_bwd.py  test_conv2d_dweight_precision.py  test_dweight.py  test_fp16_accumulate.py  test_fwd.py  test_gemm.py  test_hilbert_swizzle.py  test_int8_mma.py  test_precision_comparison.py  test_profile.py  test_profile_mma_fp16.py  test_sp_call.py  test_sparse_mm.py  (+2 more)
tests/: block.py  block_tomic.py  colmaj_bench.py  colmaj_block.py  finetune.py  fused_mlp.py  mma.py  opt.py  opt_glu.py  persistent_mma.py  swiglu.py  swizzle.py  test_cpy.py  test_cupy.py  test_gemm.py  test_matmul.py  test_sp_call.py  test_sparse_mm.py  test_trie.py  transpose.py  tune_block.py
triton/: configs.py  conv2d_bwd.py  conv2d_fwd.py  dot_3d.py  dot_sparse.py  fused_glu.py  gemini_dweight.py  groups.py  matmul0.py  mma.py  old_kernels.py  swiglu.py  test.txt  test_dweight.py  triton_tests.py  views.ipynb
tritonix/: __init__.py  autotune.py  bsr.py  configs.py  conv2d_kernels.py  dispatcher.py
tritonix/fused/: glu.py
tritonix/matrix/: block_sparse.py  mma.py  sparse.py
tritonix/ops/: __init__.py  block_sparse_linear.py  matmul.py  statistics.py  stats.py  swiglu.py
tritonix/ops/conv2d/: __init__.py  backward.py  channelsparse.py  forward.py
tritonix/utils/: __init__.py  hilbert.py  initialize.py  pruners.py  spaces.py  torch.py  trie.py  triton.py
