[project]
name = "tritonix"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayoub G.",email = "dev@ayghri.com"}
]
homepage = "https://github.com/ayghri/tritonix"
repository = "https://github.com/ayghri/tritonix"
keywords = ["triton", "kernel", "ai", "deep-learning"]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "scikit-optimize (>=0.10.2,<0.11.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "triton (>=3.4.0,<4.0.0)",
]
license = "CC-BY-NC"

[tool.poetry]
packages = [{include = "tritonix", from = "./"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
