[project]
name = "tritonix"
version = "0.1.0"
description = "High-performance Triton GPU kernels with OOM-aware autotuning"
authors = [
    {name = "Ayoub G.", email = "research@ayghri.me"}
]
keywords = ["triton", "kernel", "gpu", "cuda", "deep-learning", "autotuning"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "triton (>=3.4.0,<4.0.0)",
]
license = "CC-BY-NC"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ayghri/tritonix"
Repository = "https://github.com/ayghri/tritonix"

[project.optional-dependencies]
dev = [
    "pytest (>=8.4.1,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]
bayesian = [
    "ax-platform",
]

[tool.poetry]
packages = [{include = "tritonix", from = "./"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
