[project]
name = "tritonix"
version = "0.1.1"
description = "Triton GPU kernels with smarter autotuning"
authors = [{ name = "Ayoub G.", email = "research@ayghri.me" }]
keywords = ["triton", "kernel", "gpu", "cuda", "deep-learning", "autotuning"]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "torch (>=2.7.1,<3.0.0)",
  "triton (>=3.4.0,<4.0.0)",
  "numpy (>=2.4.4,<3.0.0)",
]
license = "CC-BY-NC"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry]
packages = [{ include = "tritonix", from = "./" }]

[project.urls]
Homepage = "https://github.com/ayghri/tritonix"
Repository = "https://github.com/ayghri/tritonix"


[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "tabulate (>=0.9.0,<0.10.0)"]
bayesian = ["ax-platform"]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.25",
  "sphinx-copybutton>=0.5",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
